# CANviz

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
backend/: README.md  canviz_test.dbc  decode.json  pyproject.toml  test.json
backend/canviz/: __main__.py  bus.py  cli.py  config.py  dbc_store.py  models.py  server.py  static_serving.py  stats_store.py  ws_broadcaster.py
backend/canviz/routers/: connect.py  dbc.py  frames.py  log.py  replay.py  stats.py
backend/tests/: test_virtual_bus.py
docs/: cli.md  interfaceguide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/ConnectionPanel/: ConnectionPanel.tsx
frontend/src/components/DbcPanel/: DbcPanel.tsx
frontend/src/components/FilterBar/: FilterBar.tsx
frontend/src/components/Layout/: BottomPanel.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/LogControls/: LogControls.tsx
frontend/src/components/MessageTable/: MessageTable.tsx
frontend/src/components/ReplayPanel/: ReplayPanel.tsx
frontend/src/components/SendFramePanel/: SendFramePanel.tsx
frontend/src/components/SettingsPanel/: SettingsPanel.tsx
frontend/src/components/SignalPlot/: SignalPlot.tsx
frontend/src/hooks/: usePlot.ts  usePlotRenderLoop.ts  useWebSocket.ts
frontend/src/store/: connectionStore.ts  dbcStore.ts  frameStore.ts  logStore.ts  plotStore.ts  sendFrameStore.ts  statsStore.ts
frontend/src/types/: can.ts
frontend/src/utils/: lttb.ts
github/: FUNDING.yml
