[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canviz"
version = "0.2.4"
description = "Open-source browser-based CAN bus analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Chanchal Dhiman", email = "chanchalv.dhiman@gmail.com" }]
keywords = ["CAN bus", "automotive", "analyzer", "cantools", "python-can"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "python-can[gs_usb]>=4.3",
    "pyusb>=1.2",
    "libusb>=1.0.26",
    "cantools>=39",
    "aiofiles>=23",
    "websockets>=12",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "pyserial>=3.0",
]

[project.urls]
Homepage = "https://github.com/Chanchaldhiman/CANviz"
Repository = "https://github.com/Chanchaldhiman/CANviz"
Issues = "https://github.com/Chanchaldhiman/CANviz/issues"
Changelog = "https://github.com/Chanchaldhiman/CANviz/releases"

[project.scripts]
canviz = "canviz.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.setuptools.package-data]
canviz = ["static/**/*", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100